add module as node_module and enable npm start to open the app

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "js-stopwatch-timer": "github:erikcelander/js-stopwatch-timer",
+    "live-server": "^1.2.2"
+  },
   "bugs": {
     "url": "https://github.com/erikcelander/time-app/issues"
   },
